objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Web_Referral__c</fullName>
        <description>How a person filling out a web form heard about us.</description>
        <label>Web Referral</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>From a friend</fullName>
                </value>
                <value>
                    <fullName>Google search</fullName>
                </value>
                <value>
                    <fullName>MSN search</fullName>
                </value>
                <value>
                    <fullName>Yahoo search</fullName>
                </value>
                <value>
                    <fullName>Web Banner</fullName>
                </value>
                <value>
                    <fullName>Postcard</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>News or Press</fullName>
                </value>
                <value>
                    <fullName>Saw a sign or truck</fullName>
                </value>
                <value>
                    <fullName>Yellow Pages</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Where_did_you_hear_about_us__c</fullName>
        <label>Where did you hear about us?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Borrego Website</fullName>
                </value>
                <value>
                    <fullName>LinkedIn</fullName>
                </value>
                <value>
                    <fullName>Dice</fullName>
                </value>
                <value>
                    <fullName>Monster</fullName>
                </value>
                <value>
                    <fullName>Indeed</fullName>
                </value>
                <value>
                    <fullName>Simplyhired</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Staffing Agency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>White__c</fullName>
        <defaultValue>false</defaultValue>
        <label>White</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Willing_to_relocate__c</fullName>
        <inlineHelpText>Select all the locations you are willing to relocate to</inlineHelpText>
        <label>Willing to relocate?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Greater Boston Area</fullName>
                </value>
                <value>
                    <fullName>NYC</fullName>
                </value>
                <value>
                    <fullName>Upstate New York</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Oakland</fullName>
                </value>
                <value>
                    <fullName>San Diego</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X18CharacterID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Character ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Built__c</fullName>
        <label>Year Built</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>authorized_work_US_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checkbox to along with formula field 1) Are you legally authorized to work in the United States?</description>
        <label>-</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>authorized_work_in_US__c</fullName>
        <formula>&quot;Are you legally authorized to work in the United States?&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>jsImpacts__Added_from_Data_com__c</fullName>
        <formula>IF( OR(CONTAINS(TEXT(LeadSource) , &quot;Data.com&quot;), CONTAINS(TEXT(LeadSource) , &quot;Jigsaw&quot;)), &quot;Added from Data.com&quot;, &quot;Other&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Added from Data.com</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jsImpacts__Data_com_do_not_auto_update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prevents automated Clean jobs from auto-filling fields with the matched Data.com record&apos;s values.</description>
        <inlineHelpText>Exclude this record from automated field updates from Data.com Clean jobs</inlineHelpText>
        <label>Data.com Does Not Auto-Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>jsImpacts__Data_com_managed__c</fullName>
        <formula>IF( Jigsaw&lt;&gt;&quot;&quot;, 1, 0)</formula>
        <label>Data.com Managed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>jsImpacts__Imported_from_Jigsaw__c</fullName>
        <description>Records were added from the Data.com tab. Contacts &amp; Leads are sourced from Jigsaw and Accounts are generally sourced from D&amp;B.</description>
        <formula>IF(OR(CONTAINS(TEXT(LeadSource),&quot;Jigsaw&quot;),CONTAINS(TEXT(LeadSource),&quot;Data.com&quot;)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Added from Data.com DEPRECATED</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__Needs_Score_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Pardot Scoring Categories. Indicates that new scores will soon be synced from Pardot for this lead.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Needs Score Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Last_Scored_At__c</fullName>
        <description>Used for Pardot Scoring Categories. Indicates the last time a Scoring Category score was updated for this lead.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Pardot Last Scored At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Pardot Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Pardot campaign. This value can later be changed manually or via an Automation Rule.</description>
        <inlineHelpText>The Pardot Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Pardot campaign.</inlineHelpText>
        <label>Pardot Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Pardot Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when a Pardot tracked anonymous visitor first became a known prospect.</description>
        <label>Pardot Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Pardot Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Pardot Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Pardot created date represents the date and time at which the Prospect record was created in Pardot. This will often differ from your Salesforce.com created date.</description>
        <inlineHelpText>The Pardot created date represents the date and time at which the Prospect record was created in Pardot. This will often differ from your Salesforce.com created date.</inlineHelpText>
        <label>Pardot Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <inlineHelpText>First activity that Pardot recorded for this record.</inlineHelpText>
        <label>Pardot First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, the field holds the term that was searched on.</description>
        <inlineHelpText>The parsed keyword or query if the first referrer was a search in Google, Yahoo!, Bing, etc.</inlineHelpText>
        <label>Pardot First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <inlineHelpText>Any extra details about major referrer types (e.g., Google Natural Search, Google Paid Search, Facebook, LinkedIn, and more)</inlineHelpText>
        <label>Pardot First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <inlineHelpText>The full URL of the page the user visited just prior to accessing a Pardot-tracked page (a page on your website, a landing page, etc.) for the first time.</inlineHelpText>
        <label>Pardot First Referrer</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Pardot grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <inlineHelpText>Like the score it&apos;s used as a way of distinguishing between two leads/contacts. The grade is based off of explicit data: job title, location, industry, size of company, etc</inlineHelpText>
        <label>Pardot Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <inlineHelpText>When the record was last touched by a marketing effort initiated via Pardot</inlineHelpText>
        <label>Pardot Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Pardot Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__pardot_hard_bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that determines whether lead hard bounced.</description>
        <label>Pardot Hard Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Pardot score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <inlineHelpText>Measurement of how much actual activity a lead or contact is taking</inlineHelpText>
        <label>Pardot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Pardot. From there you can view his or her complete activity history. This URL is generated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>require_sponsorship__c</fullName>
        <formula>&quot;Will you now or in the future require sponsorship for employment visa status (e.g., H-1B visa status)?&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>require_sponsorship_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checkbox to along with formula field 2) Will you now or in the future require sponsorship for employment visa status (e.g., H-1B visa status)?</description>
        <label>-</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zisf__Person_Has_Moved__c</fullName>
        <description>Displays ZoomInfo Has Moved data point. Denotes whether the lead/contact has moved from the current company. Values are Yes, Uncertain, No.</description>
        <inlineHelpText>Displays ZoomInfo Has Moved data point. Denotes whether the lead/contact has moved from the current company. Values are Yes, Uncertain, No.</inlineHelpText>
        <label>Person Has Moved</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Complete_Status__c</fullName>
        <defaultValue>&quot;Not Compared&quot;</defaultValue>
        <label>ZoomInfo Complete Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Email__c</fullName>
        <description>ZoomInfo Email Address for the Lead record.</description>
        <inlineHelpText>ZoomInfo Email Address for the Lead record.</inlineHelpText>
        <label>ZoomInfo Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Industry__c</fullName>
        <description>The Salesforce standard Industry field is only 40 characters in length. As ZoomInfo industries are sometimes longer than this, the ZoomInfo Industry field can hold up to 255 characters.</description>
        <label>ZoomInfo Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Last_Clean_Run__c</fullName>
        <description>Date/time refers to last time ZoomInfo Clean ran for record.</description>
        <inlineHelpText>Date/time refers to last time ZoomInfo Clean ran for record.</inlineHelpText>
        <label>ZoomInfo Last Clean Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Phone__c</fullName>
        <description>ZoomInfo Phone for the Lead record.</description>
        <inlineHelpText>ZoomInfo Phone for the Lead record.</inlineHelpText>
        <label>ZoomInfo Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this value is set to &quot;True&quot;, an incoming Lead with blank fields will be automatically appended with available data by ZoomInfo.</description>
        <inlineHelpText>When this value is set to &quot;True&quot;, an incoming Lead with blank fields will be automatically appended with available data by ZoomInfo.</inlineHelpText>
        <label>ZoomInfo Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zisf__Zoom_Clean_Status__c</fullName>
        <label>ZoomInfo Clean Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clean</fullName>
                    <color>#009900</color>
                    <label>Clean</label>
                </value>
                <value>
                    <fullName>In Sync</fullName>
                    <color>#78C953</color>
                    <label>In Sync</label>
                </value>
                <value>
                    <fullName>Not Found</fullName>
                    <color>#EFAE73</color>
                    <label>Not Found</label>
                </value>
                <value>
                    <fullName>Not Compared</fullName>
                    <color>#AFCADF</color>
                    <default>true</default>
                    <label>Not Compared</label>
                </value>
                <value>
                    <fullName>Different</fullName>
                    <color>#F3D904</color>
                    <label>Different</label>
                </value>
                <value>
                    <fullName>Company Clean Only</fullName>
                    <color>#33CC00</color>
                    <label>Company Clean Only</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                    <color>#CC0000</color>
                    <label>Error</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zisf__zoom_id__c</fullName>
        <description>ZoomInfo person id, if the data on this object has ever been imported from the ZIDB.
Stored as Long on Solr.</description>
        <label>ZoomInfo ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__zoom_lastupdated__c</fullName>
        <description>Last updated from ZoomInfo timestamp</description>
        <label>ZoomInfo Last Updated</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>APM_Oakland</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4) AND 5</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Salary_Range__c</columns>
        <columns>LEAD.RATING</columns>
        <columns>Lead_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.EmploymentApplicant</value>
        </filters>
        <filters>
            <field>Branch__c</field>
            <operation>equals</operation>
            <value>Oakland</value>
        </filters>
        <filters>
            <field>Job_Applying_For__c</field>
            <operation>equals</operation>
            <value>Assistant Project Manager</value>
        </filters>
        <filters>
            <field>Job_Requisition__c</field>
            <operation>equals</operation>
            <value>19929</value>
        </filters>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2016 12:00 AM</value>
        </filters>
        <label>APM - Oakland</label>
        <language>en_US</language>
        <sharedTo>
            <role>Director_of_Operations_NorCal_Project_Manager</role>
            <role>Industrial_Engineer1</role>
            <role>Regional_Project_Manager_NorCal</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>APM_PE_SD</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.RATING</columns>
        <columns>Lead_Notes__c</columns>
        <columns>Next_Step__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Job_Requisition__c</field>
            <operation>equals</operation>
            <value>27812</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.EmploymentApplicant</value>
        </filters>
        <label>Assistant Project Manager - SD</label>
        <language>en_US</language>
        <sharedTo>
            <group>REQ_27812_Recruiting</group>
            <role>Director_of_Operations_SoCal_Project_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Accounting_Applicants</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Job_Applying_For__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Salary_Range__c</columns>
        <columns>LEAD.RATING</columns>
        <columns>Lead_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Job_Applying_For__c</field>
            <operation>contains</operation>
            <value>Accounts</value>
        </filters>
        <filters>
            <field>Job_Requisition__c</field>
            <operation>equals</operation>
            <value>21500</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.EmploymentApplicant</value>
        </filters>
        <label>Accounting Applicants</label>
        <language>en_US</language>
        <sharedTo>
            <role>VPFinance</role>
            <role>VP_of_People_Culture</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Accounting_Manager_San_Diego</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.RATING</columns>
        <columns>Lead_Notes__c</columns>
        <columns>Next_Step__c</columns>
        <columns>authorized_work_in_US__c</columns>
        <columns>authorized_work_US_checkbox__c</columns>
        <columns>require_sponsorship__c</columns>
        <columns>require_sponsorship_checkbox__c</columns>
        <columns>Salary_Range__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.EmploymentApplicant</value>
        </filters>
        <filters>
            <field>Job_Requisition__c</field>
            <operation>equals</operation>
            <value>34360</value>
        </filters>
        <label>Accounting Manager-San Diego</label>
        <language>en_US</language>
        <sharedTo>
            <group>Req_34360_Recruiting</group>
            <role>CFO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Accounting_P_C</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.RATING</columns>
        <columns>Salary_Range__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.EmploymentApplicant</value>
        </filters>
        <filters>
            <field>Job_Requisition__c</field>
            <operation>equals</operation>
            <value>16227</value>
        </filters>
        <filters>
            <field>Job_Applying_For__c</field>
            <operation>equals</operation>
            <value>Payroll and Corporate Accountant</value>
        </filters>
        <label>Accounting - P &amp; C</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Accounts_Payable_Administrator</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.RATING</columns>
        <columns>Lead_Notes__c</columns>
        <columns>Next_Step__c</columns>
        <columns>authorized_work_in_US__c</columns>
        <columns>authorized_work_US_checkbox__c</columns>
        <columns>require_sponsorship__c</columns>
        <columns>require_sponsorship_checkbox__c</columns>
        <columns>Salary_Range__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.EmploymentApplicant</value>
        </filters>
        <filters>
            <field>Job_Requisition__c</field>
            <operation>equals</operation>
            <value>28772,37010</value>
        </filters>
        <label>Accounts Payable Admin - San Diego</label>
        <language>en_US</language>
        <sharedTo>
            <group>REQ_37010_Recruiting</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Alex_Mintz_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Site_State__c</columns>
        <columns>LEAD.STREET</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Mintz</value>
        </filters>
        <label>Alex Mintz Leads</label>
    </listViews>
    <listViews>
        <fullName>Alex_Yager_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.PHONE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Yager</value>
        </filters>
        <label>Alex Yager Leads</label>
    </listViews>
    <listViews>
        <fullName>All_Employment_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Job_Requisition__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.EmploymentApplicant</value>
        </filters>
        <label>All Employment Leads</label>
        <language>en_US</language>
        <sharedTo>
            <role>Marketing_and_Communications_Manager</role>
            <roleAndSubordinatesInternal>ITManager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Leads_2016</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Leads - 2016</label>
        <language>en_US</language>
    </listViews>
</CustomObject>